--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "joi": "^14.3.1",
     "leaflet": "^1.4.0",
     "prettier": "^1.16.4",
     "react": "^16.8.4",
